--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" href="https://static.thenounproject.com/png/40328-200.png">
+    <link rel="icon" href="https://i.imgur.com/iYKmUvA.png">
+    <script src="https://kit.fontawesome.com/68d8235f51.js" crossorigin="anonymous"></script>
     <style type="text/css">
         .blanco {
             color: white;
@@ -30,7 +31,11 @@
         }
 
         .cuadrados {
-            outline: 1px solid #d0d0d0;
+            outline: 1px solid #b96acb;
+        }
+
+        .amarillo {
+            color: #ffc107;
         }
     </style>
     <title>Perfil Mafioso</title>
@@ -39,129 +44,73 @@
 <body>
     <section class="negro">
         <div class="container negro">
-            <div class="row py-2">
+            <div class="row pt-4">
                 <div class="col-10">
                     <a href="/index">
-                        <img width="50" height="50" src="https://cdn.icon-icons.com/icons2/1709/PNG/512/back_112351.png"
-                            alt="">
+                        <i class="fa-solid fa-arrow-left-long fa-3x blanco"></i>
                     </a>
                 </div>
-                <div class="col-1 text-end">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/2787/PNG/512/sun_and_moon_icon_177460.png" alt="">
+                <div class="col-1 text-end blanco">
+                    <i class="fa-solid fa-sun fa-3x"></i>
                 </div>
-                <div class="col-1 text-end">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/2449/PNG/512/headphones_head_set_chat_live_support_icon_148822.png"
-                        alt="">
+                <div class="col-1 text-end blanco">
+                    <i class="fa-solid fa-headphones fa-3x"></i>
                 </div>
             </div>
-            <div class="row fmagenta mb-3">
-                <div class="col-1">
+            <div class="row magenta py-3">
+                <div class="col-1 fmagenta px-1" style="border-radius: 20px;">
                     <img width="100" height="100" src="https://i.imgur.com/iYKmUvA.png" alt="" srcset="">
                 </div>
-                <div class="col-5">
-                    <h2 class="blanco">MAFIANCE-(nombre de usuario)</h2>
-                    <h6>(Número de ID)</h6>
+                <div class="col-4 px-5">
+                    <h2>MAFIANCE - user name</h2>
+                    <h6>Email: example@gmail.com</h6>
+                    <h6>ID: (Número de ID)</h6>
                 </div>
-                <div class="col-2">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
-                </div>
-                <div class="col-2 cuadrados gris text-center" style="border-radius: 50px;">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/1369/PNG/512/-verified-user_89978.png" alt="">
-                    <h6 class="blanco">Verified</h6>
+                <div class="col-1 amarillo text-center">
+                    <h6>Usuario verificado</h6>
+                    <i class="fa-solid fa-circle-check fa-3x"></i>
                 </div>
             </div>
-            <div class="row magenta cuadrados gris  mb-3" style="border-radius: 30px;">
-                <div class="col-2">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/3263/PNG/512/vip_diamond_icon_206879.png" alt=""
-                        srcset="">
-                </div>
-                <div class="col-4">
-                    <h6>Regular</h6>
-                </div>
-                <div class="col-4 text-end">
-                    <p>Usar USDT para obtener descuentos </p>
-                </div>
-                <div class="col-2">
-                    <img width="30" height="30"
-                        src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
-                </div>
-            </div>
-            <div class="row cuadrados gris mb-4">
-                <div class="col-6 magenta text-end">
-                    <h3>MAFIANCE fácil para abuelas</h3>
-                </div>
-                <div class="col-6 px-3">
-                    <div class="form-check form-switch pt-2">
-                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                        <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-                    </div>
-                </div>
-            </div>
-            <div class="row fmagenta pt-3">
+            <div class="row cuadrados pt-3 blanco" style="border-radius: 20px;">
                 <div class="col-1">
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/1893/PNG/512/clipboard_120835.png" alt="" srcset="">
+                        <i class="fa-solid fa-clipboard fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/2515/PNG/512/ticket_icon_150905.png" alt=""
-                            srcset="">
+                        <i class="fa-solid fa-ticket-simple fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/1674/PNG/512/personadd_111023.png" alt="" srcset="">
+                        <i class="fa-solid fa-user-plus fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/3263/PNG/512/exchange_icon_206963.png" alt=""
-                            srcset="">
+                        <i class="fa-solid fa-circle-dollar-to-slot fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/3249/PNG/512/gift_card_filled_icon_199839.png" alt=""
-                            srcset="">
+                        <i class="fa-solid fa-credit-card fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/2091/PNG/512/gift_icon_128461.png" alt="" srcset="">
+                        <i class="fa-solid fa-gift fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/2807/PNG/512/notification_bell_icon_178938.png"
-                            alt="" srcset="">
+                        <i class="fa-solid fa-bell fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50" src="http://cdn.onlinewebfonts.com/svg/img_346161.png" alt=""
-                            srcset="">
+                        <i class="fa-solid fa-money-bill-transfer fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/936/PNG/512/shield_icon-icons.com_73417.png" alt=""
-                            srcset="">
+                        <i class="fa-solid fa-shield-halved fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/1325/PNG/512/efficiency4x_86991.png" alt=""
-                            srcset="">
+                        <i class="fa-solid fa-gear fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/933/PNG/512/help-button-speech-bubble-with-question-mark_icon-icons.com_72707.png"
-                            alt="" srcset="">
+                        <i class="fa-solid fa-circle-question fa-3x"></i>
                     </div>
                     <div class="pb-3">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/878/PNG/512/share-symbol_icon-icons.com_68493.png"
-                            alt="" srcset="">
+                        <i class="fa-solid fa-share-nodes fa-3x"></i>
                     </div>
                 </div>
-                <div class="col-10">
+                <div class="col-10 amarillo">
                     <div class="pb-4">
                         <h3>Centro de tareas</h3>
                     </div>
@@ -200,60 +149,49 @@
                     </div>
                 </div>
                 <div class="col-1">
-                    <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                    <div class="py-2">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                     <div class="py-3">
-                        <img width="30" height="30"
-                            src="https://cdn.icon-icons.com/icons2/1904/PNG/512/rightarrow_121279.png" alt="">
+                        <i class="fa-solid fa-arrow-right-long fa-2x"></i>
                     </div>
                 </div>
             </div>
             <div class="row py-5">
                 <div class="col text-center">
-                    <a href="/" type="button" class="btn btn-secondary btn-lg">Cerrar sesión</a>
-                    <p class="py-5 blanco">Si no te gusta nuestra app siempre puedes quejarte con la de soporte las 24h,
+                    <a href="/" type="button" class="btn btn-danger btn-lg">Cerrar sesión</a>
+                    <p class="py-5 amarillo">Si no te gusta nuestra app siempre puedes quejarte con la de soporte las
+                        24h,
                         o
                         llenarnos la casilla de mensajes: mafiance.inc@gmail.org</p>
                 </div>
