--- a/templates/divisa.html
+++ b/templates/divisa.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" href="https://static.thenounproject.com/png/40328-200.png">
+    <link rel="icon" href="https://i.imgur.com/iYKmUvA.png">
+    <script src="https://kit.fontawesome.com/68d8235f51.js" crossorigin="anonymous"></script>
     <style type="text/css">
         .blanco {
             color: white;
@@ -42,8 +43,7 @@
             <div class="row fmagenta py-3" style="border-radius: 20px;">
                 <div class=" col-4">
                     <a href="/p2pBuyer">
-                        <img width="50" height="50" src="https://cdn.icon-icons.com/icons2/1709/PNG/512/back_112351.png"
-                            alt="">
+                        <i class="fa-solid fa-arrow-left-long fa-3x blanco"></i>
                     </a>
                 </div>
                 <div class="col-7 px-5 mx-5">
@@ -51,17 +51,21 @@
                 </div>
             </div>
             <div class="row mt-3">
-                <div class="col">
+                <div class="col-4"></div>
+                <div class="col-4">
                     <form class="d-flex" role="search">
                         <input class="form-control me-2 text-center" type="search"
                             placeholder="🔍Por favor coloque la moneda💸" aria-label="Buscar">
                     </form>
                 </div>
-                <div class="col-12 pt-5 pb-3">
-                    <h3>Monedas disponibles ◘</h3>
-                    <hr>
+                <div class="col-4"></div>
+                <div class="col-3 py-3">
+                    <h3>Monedas disponibles</h3>
                 </div>
-
+                <div class="col-3 py-2">
+                    <i class="fa-brands fa-redhat fa-3x"></i>
+                </div>
+                <hr>
                 <!--Recordatorio: 1.Hacer que al darle click el usuario se coloque un icono de ✅ y redireccione. 
                 2. Que el abcedario permanezca en pantalla cuando haga scroll
                 3. Consultar si se debe meter en base de datos tengo sospecha.
