--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" href="https://static.thenounproject.com/png/40328-200.png">
+    <link rel="icon" href="https://i.imgur.com/iYKmUvA.png">
+    <script src="https://kit.fontawesome.com/68d8235f51.js" crossorigin="anonymous"></script>
     <style type="text/css">
         .blanco {
             color: white;
@@ -24,6 +25,14 @@
         .fmagenta {
             background-color: #8c509a;
         }
+
+        .amarillo {
+            color: #ffc107;
+        }
+
+        .cuadrados {
+            outline: 1px solid #d0d0d0;
+        }
     </style>
     <title>Mafiance | Compra/Vende USDT</title>
 </head>
@@ -32,57 +41,109 @@
     <section class="negro">
         <div class="container">
             <div class="row">
-                <div class="col text-center py-4">
-                    <a href="/index" type="button" class="btn btn-outline-light">Comprar criptos</a>
-                    <a href="/login" type="button" class="btn btn-outline-light">Iniciar sesión</a>
-                    <a href="/signin" type="button" class="btn btn-outline-light">Registrarse</a>
+                <div class="col text-end py-5">
+                    <a href="/index" type="button" class="btn btn-outline-light fmagenta">Comprar criptos</a>
+                    <a href="/login" type="button" class="btn btn-outline-light fmagenta">Iniciar sesión</a>
+                    <a href="/signin" type="button" class="btn btn-outline-light fmagenta">Registrarse</a>
                 </div>
             </div>
         </div>
         <div class="container blanco">
-            <div class="row">
-                <div class="col text-center">
-                    <h1>Bienvenido a</h1>
+            <div class="row cuadrados" style="border-radius: 20px;">
+                <div class="col text-center py-3">
+                    <h1 class="magenta">Bienvenido a MAFIANCE </h1>
+                    <i class="fa-brands fa-redhat fa-5x"></i>
                 </div>
-                <div class="row">
-                    <div class="col-6 text-end mt-5 pt-3">
-                        <h1 class="magenta">MAFIANCE</h1>
-                    </div>
-                    <div class="col-6">
-                        <img class="img-fluid" src="https://static.thenounproject.com/png/40328-200.png" alt="">
-                    </div>
-                    <hr>
-                    <div class="col-6 py-3">
-                        <h1>Compra, holdea y haz trading con la aplicación más insegura del mercado.</h1>
-                        <h6 class="magenta">La inversión en criptoactivos no está regulada, puede no ser adecuada para
-                            inversores
-                            minoristas y perderse la totalidad del importe invertido.</h6>
-                    </div>
-                    <div class="col-3 pt-5 mt-4 px-5">
-                        <a href="/login" type="button" class="btn btn-outline-light">¡Empecemos!</a>
-                    </div>
-                    <div class="col-3">
-                        <img class="img-fluid"
-                            src="https://www.pngkey.com/png/full/182-1823859_h1z1s-playerbase-is-in-a-free-fall-market.png"
-                            alt="">
-                    </div>
-                    <hr>
-                    <div class="col-12 pb-3">
-                        <h1>Acerca de nosotros</h1>
-                        <p>Esta aplicación tiene como objetivo desarrollar el aprendizaje del autor y que puedas hacer
-                            tus transacciones fraudulentas tranquilo/a sin presión del estado pero te cobraremos
-                            servicios de mantenimiento de cuenta altísimos, esperamos que disfrutes el trayecto. 🚀</p>
-                    </div>
+                <hr class="magenta">
+                <div class="col-6 pb-3">
+                    <h1>Compra, holdea y haz trading con la aplicación más insegura del mercado.</h1>
+                    <hr class="magenta">
+                    <h5 class="magenta">La inversión en criptoactivos no está regulada, puede no ser adecuada para
+                        inversores
+                        minoristas y perderse la totalidad del importe invertido.</h5>
                 </div>
-                <hr>
-                <div class="col text-center pb-5">
-                    <small><strong>Todo el contenido tiene fin humorístico, no se tome nada de lo que vea a continuación
-                            en serio, ni intente hacer transacciones reales.</strong></small>
-                    <div>
-                        <small>Develop by: Cthulhu © 2022</small>
+                <div class="col-3 pt-5 mt-4 px-5">
+                    <a href="/login" type="button" class="btn btn-warning">¡Empecemos!</a>
+                </div>
+                <div class="col-3">
+                    <img class="img-fluid"
+                        src="https://www.pngkey.com/png/full/182-1823859_h1z1s-playerbase-is-in-a-free-fall-market.png"
+                        alt="">
+                </div>
+                <hr class="magenta">
+                <div class="col pb-3">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" width="50"
+                        height="50">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://estaticos-cdn.prensaiberica.es/clip/fb81a25d-67f1-458f-a09c-103fd744f500_16-9-discover-aspect-ratio_default_0.jpg"
+                                    class="d-inline-block w-100" alt="...">
+
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://blockchainguatemala.org/wp-content/uploads/2022/07/el-regulador-australiano-prueba-la-eliminacion-automatica-de-los-sitios-de-estafa-de-criptomonedas.jpg"
+                                    class="d-block w-100" alt="...">
+
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://www.criptonoticias.com/wp-content/uploads/2021/09/robos-defi-dapps-1024x576.jpg"
+                                    class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://i.pcmag.com/imagery/articles/06GJTmslGF10jd9FWGbI7jZ-1..v1638208999.jpg"
+                                class="d-block w-100" alt="...">
+                        </div>
+
+                        <div class="carousel-item">
+                            <img src="https://static.news.bitcoin.com/wp-content/uploads/2022/02/binance-phishing-scam.jpg"
+                                class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://btodigital.com/wp-content/uploads/2022/04/¿Comprar-casa-con-bitcoins-BTODigital.png"
+                                class="d-block w-100" alt="...">
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
                 </div>
             </div>
+            <div class="row pt-5">
+                <div class="col-12 cuadrados pb-3" style="border-radius: 20px;">
+                    <h1>Acerca de nosotros</h1>
+                    <hr class="magenta">
+                    <p>Esta aplicación tiene como objetivo desarrollar el aprendizaje del autor y que puedas hacer
+                        tus transacciones fraudulentas tranquilo/a sin presión del estado pero te cobraremos
+                        servicios de mantenimiento de cuenta altísimos, esperamos que disfrutes el trayecto. 🚀</p>
+                </div>
+
+            </div>
+        </div>
+        <hr>
+        <div class="col text-center magenta pb-5">
+            <small>Todo el contenido tiene fin humorístico, no se tome nada de lo que vea a continuación
+                en serio, ni intente hacer transacciones reales.</small>
+            <div>
+                <small>Develop by: Cthulhu © 2022</small>
+            </div>
+        </div>
+        </div>
         </div>
     </section>
 </body>
