--- a/templates/orders.html
+++ b/templates/orders.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" href="https://static.thenounproject.com/png/40328-200.png">
+    <link rel="icon" href="https://i.imgur.com/iYKmUvA.png">
+    <script src="https://kit.fontawesome.com/68d8235f51.js" crossorigin="anonymous"></script>
     <style type="text/css">
         .blanco {
             color: white;
@@ -40,27 +41,28 @@
         .verde {
             color: rgb(78, 203, 78);
         }
+
+        .amarillo {
+            color: #ffc107;
+        }
     </style>
     <title>Ordenes | Mafiance</title>
 </head>
 
 <body>
-    <section class="negro blanco">
+    <section class="negro blanco pb-5">
         <div class="container">
             <div class="row fmagenta py-3" style="border-radius: 20px;">
                 <div class=" col-4">
                     <a href="/p2pBuyer">
-                        <img width="50" height="50" src="https://cdn.icon-icons.com/icons2/1709/PNG/512/back_112351.png"
-                            alt="">
+                        <i class="fa-solid fa-arrow-left-long fa-3x blanco"></i>
                     </a>
                 </div>
                 <div class="col-4 text-center">
                     <h3>Todas las ordenes</h3>
                 </div>
                 <div class="col-4 text-end">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/936/PNG/512/calendar-with-spring-binder-and-date-blocks_icon-icons.com_73645.png"
-                        alt="">
+                    <i class="fa-regular fa-calendar-days fa-3x"></i>
                 </div>
             </div>
             <!--Recordar:
@@ -70,8 +72,9 @@
                 4. Que el icono de la doble hoja copie
                 5. Registro de chat accediendo al icono. Con el nombre del comprador/vendedor
                 6. Estado de la orden-->
-            <div class="row mt-3 gris" style="border-radius: 20px;">
-                <div class="col-6 py-3">
+            <div class="row mt-3 magenta">
+                <div class="col-3"></div>
+                <div class="col-3 cuadrados py-3" style="border-radius: 20px;">
                     <div class="col-6 rojo">
                         <h3>Venta</h3>
                     </div>
@@ -80,25 +83,25 @@
                     </div>
                     <hr>
                     <p>Precio ARS$ 273.01</p>
-                    <P>Monto 91.57 USDT</P>
+                    <P class="amarillo">Monto 91.57 USDT</P>
                     <p>Orden ID 56789</p>
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/1129/PNG/512/copyblackinterfacesymboloftwopapersheets_79854.png"
-                        alt="">
-                    <p>User Name Freddy's Perdomo</p>
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/656/PNG/512/chat_talk_conversation_sms_bubble_icon-icons.com_59983.png"
-                        alt="">
+                    <i class="fa-solid fa-copy fa-2x"></i>
+                    <hr>
+                    <p class="pt-2 amarillo">User Name Freddy's Perdomo</p>
+                    <i class="fa-solid fa-comments fa-2x"></i>
                 </div>
-                <div class="col-6 py-3">
+                <div class="col-3 py-3">
                     <p>Completado ></p>
                     <p>09-14-2022</p>
                     <p>10:35:30</p>
                     <h3>ARS$ 25,000.00</h3>
+                    <hr>
                 </div>
+                <div class="col-3"></div>
             </div>
-            <div class="row mt-3 gris" style="border-radius: 20px;">
-                <div class="col-6 py-3">
+            <div class="row mt-3 magenta">
+                <div class="col-3"></div>
+                <div class="col-3 cuadrados py-3" style="border-radius: 20px;">
                     <div class="col-6 verde">
                         <h3>Compra</h3>
                     </div>
@@ -107,22 +110,21 @@
                     </div>
                     <hr>
                     <p>Precio ARS$ 273.01</p>
-                    <P>Monto 91.57 USDT</P>
+                    <P class="amarillo">Monto 91.57 USDT</P>
                     <p>Orden ID 56789</p>
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/1129/PNG/512/copyblackinterfacesymboloftwopapersheets_79854.png"
-                        alt="">
-                    <p>User Name Freddy's Perdomo</p>
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/656/PNG/512/chat_talk_conversation_sms_bubble_icon-icons.com_59983.png"
-                        alt="">
+                    <i class="fa-solid fa-copy fa-2x"></i>
+                    <hr>
+                    <p class="pt-2 amarillo">User Name Nelson Mandela</p>
+                    <i class="fa-solid fa-comments fa-2x"></i>
                 </div>
-                <div class="col-6 py-3">
+                <div class="col-3 py-3">
                     <p>Pendiente ></p>
                     <p>09-14-2022</p>
                     <p>10:35:30</p>
                     <h3>ARS$ 25,000.00</h3>
+                    <hr>
                 </div>
+                <div class="col-3"></div>
             </div>
         </div>
     </section>
