--- a/templates/p2pBuyer.html
+++ b/templates/p2pBuyer.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" href="https://static.thenounproject.com/png/40328-200.png">
+    <link rel="icon" href="https://i.imgur.com/iYKmUvA.png">
+    <script src="https://kit.fontawesome.com/68d8235f51.js" crossorigin="anonymous"></script>
     <style type="text/css">
         .blanco {
             color: white;
@@ -53,8 +54,12 @@
             background-color: rgb(87, 255, 87);
             border-radius: 80px;
         }
+
+        .amarillo {
+            color: #ffc107;
+        }
     </style>
-    <title>Comercio P2P | Mafiance</title>
+    <title>Comercio P2P | Comprar </title>
 </head>
 
 <body>
@@ -63,13 +68,12 @@
             <div class="row py-3">
                 <div class="col-4">
                     <a href="/index">
-                        <img width="50" height="50" src="https://cdn.icon-icons.com/icons2/1709/PNG/512/back_112351.png"
-                            alt="">
+                        <i class="fa-solid fa-arrow-left-long fa-3x blanco"></i>
                     </a>
                 </div>
                 <div class="col-4 text-center">
                     <div class="dropdown-center">
-                        <button class="btn btn-secondary dropdown-toggle btn-lg" type="button" data-bs-toggle="dropdown"
+                        <button class="btn btn-warning dropdown-toggle btn-lg" type="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             P2P
                         </button>
@@ -83,24 +87,22 @@
                 <!--1.Recordar que debo hacer que el nombre de divisa cambie al cambiar la otra vista
                     2. Debo crear pop ups: a) notificaciones de alerta, b)opciones, c)cantidad, metodos de pago
                     3. Filtro-->
-                <div class="col-2 text-end">
+                <div class="col-2 text-end blanco">
                     <h3>ARS</h3>
                 </div>
                 <div class="col-1 text-end px-4">
                     <a href="/divisa">
-                        <img widht="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/3263/PNG/512/exchange_icon_206963.png" alt="">
+                        <i class="fa-solid fa-arrow-right-arrow-left fa-3x blanco"></i>
                     </a>
                 </div>
                 <div class="col-1">
-                    <img width="50" height="50"
-                        src="https://cdn.iconscout.com/icon/free/png-512/options-1767904-1502157.png" alt="">
+                    <i class="fa-solid fa-bars fa-3x blanco"></i>
                 </div>
             </div>
         </div>
         <div class="container gris cuadrados blanco" style="border-radius: 20px;">
             <div class="row py-3 my-3">
-                <div class="col-5 pt-4">
+                <div class="col-2 pt-4">
                     <div class="btn-group btn-group-lg" role="group" aria-label="Large button group">
                         <a href="/p2pBuyer" type="radio" class="btn-check" name="btnradio" id="btnradio1"
                             autocomplete="off" checked></a>
@@ -111,15 +113,12 @@
                         <label class="btn btn-outline-light" for="btnradio2">Vender</label>
                     </div>
                 </div>
-                <div class="col-4 px-5">
-                    <img width="100" height="100"
-                        src="https://cdn.icon-icons.com/icons2/2070/PNG/512/raccoon_icon_125936.png" alt="">
+                <div class="col-8 text-center">
+                    <i class="fa-brands fa-redhat fa-5x"></i>
                 </div>
-                <div class="col-2 text-end px-4 pt-4">
+                <div class="col-1 text-end px-4 pt-4">
                     <button type="button" class="btn btn-outline-light position-relative">
-                        <img width="50" height="50"
-                            src="https://cdn.icon-icons.com/icons2/2807/PNG/512/notification_bell_icon_178938.png"
-                            alt="" srcset="">
+                        <i class="fa-solid fa-bullhorn fa-3x"></i>
                         <span
                             class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
                             <span class="visually-hidden">New alerts</span>
@@ -127,12 +126,14 @@
                     </button>
                 </div>
                 <div class="col-1 pt-4">
-                    <a href="">
-                        <a href="/orders">
-                            <img width="50" height="50"
-                                src="https://cdn.icon-icons.com/icons2/2596/PNG/512/history_icon_155273.png" alt=""
-                                srcset="">
-                        </a>
+                    <a href="/orders" class="blanco">
+                        <button type="button" class="btn btn-outline-light position-relative">
+                            <i class="fa-solid fa-scroll fa-3x"></i>
+                            <span
+                                class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
+                                <span class="visually-hidden">New alerts</span>
+                            </span>
+                    </a>
                 </div>
             </div>
             <div class="row">
@@ -155,26 +156,53 @@
             </div>
             <hr>
             <div class="row">
-                <div class="col-2">
-                    <p>Cantidad</p>
+                <div class="col-3 text-end">
+                    <div class="dropdown-center">
+                        <button class="btn btn-warning dropdown-toggle btn-lg" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Cantidad
+                        </button>
+                        <ul class="dropdown-menu">
+                            <input class="form-control me-2 text-center" type="search"
+                                placeholder="Ingresa la cantidad total" name="quantity" aria-label="#">
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <p>Método de pago</p>
+                <div class="col-3 text-center">
+                    <div class="dropdown">
+                        <button class="btn btn-warning dropdown-toggle btn-lg" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Método de pago
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item active" href="#">Mercado Pago</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Transferencia bancaria</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Lemon Cash</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Brubank</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-3">
-                    <p>Comerciantes Pro (osea los Capos del Crimen, guarda que son jodidos eh)</p>
-                    <div class="form-check form-switch pt-2">
+                <div class="col-2 text-center amarillo cuadrados mx-4" style="border-radius: 30px;">
+                    <h5>Trampero Pro</h5>
+                    <div class="form-check form-switch d-inline-block">
                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                         <label class="form-check-label" for="flexSwitchCheckDefault"></label>
                     </div>
                 </div>
-                <div class="col-3 text-end">
-                    <p>Filtro</p>
-                </div>
                 <div class="col-1">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/936/PNG/512/filter-tool-black-shape_icon-icons.com_73566.png"
-                        alt="">
+
+                </div>
+                <div class="col-1 amarillo">
+                    <i class="fa-solid fa-filter fa-3x"></i>
                 </div>
             </div>
             <hr>
@@ -213,19 +241,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
-                    <h4>BitcomTxm</h4>
+                <div class="col-2 amarillo">
+                    <h3>BitcomTxm</h3>
                     <p>User: ID</p>
                 </div>
                 <div class="col-1">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/1369/PNG/512/-verified-user_89978.png" alt="">
+                    <i class="fa-solid fa-circle-check fa-3x"></i>
                 </div>
                 <div class="col-2 magenta">
                     <p>120 Órdenes | 81.10%</p>
                     <div class="pt-5"></div>
                     <div class="pt-5">
-                        <a href="/" type="button" class="btn fmagenta btn-lg">Comprar</a>
+                        <a href="/" type="button" class="btn fmagenta blanco btn-lg">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -255,13 +282,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2">
-                    <h4>Michael Jackson</h4>
+                <div class="col-2 amarillo">
+                    <h3>Michael Jackson</h3>
                     <p>User: ID</p>
                 </div>
                 <div class="col-1">
-                    <img width="50" height="50"
-                        src="https://cdn.icon-icons.com/icons2/1369/PNG/512/-verified-user_89978.png" alt="">
+                    <i class="fa-solid fa-circle-check fa-3x"></i>
                 </div>
                 <div class="col-2 magenta">
                     <p>3000 Órdenes | 95.00%</p>
