--- a/templates/signin.html
+++ b/templates/signin.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="icon" href="https://static.thenounproject.com/png/40328-200.png">
+    <link rel="icon" href="https://i.imgur.com/iYKmUvA.png">
+    <script src="https://kit.fontawesome.com/68d8235f51.js" crossorigin="anonymous"></script>
     <style type="text/css">
         .blanco {
             color: white;
@@ -24,12 +25,24 @@
         .fmagenta {
             background-color: #8c509a;
         }
+
+        .cuadrados {
+            outline: 1px solid #d0d0d0;
+        }
+
+        .gris {
+            background-color: #393939;
+        }
+
+        .amarillo {
+            color: #ffc107;
+        }
     </style>
     <title>Registrarse | Mafiance</title>
 </head>
 
 <body>
-    <section class="negro">
+    <section class="negro pb-5">
         {% if mensaje3 %}
         <div class="container py-2">
             <div class="row">
@@ -43,47 +56,52 @@
         {% endif %}
         <form class="container blanco" action="/signin/new_user">
             <div class="row">
-                <div class="col-6 py-5">
-                    <a href="/login" class="text-decoration-none">
-                        <h3>⬅</h3>
+                <div class="col-6 pt-5">
+                    <a href="/login" class="text-decoration-none blanco">
+                        <i class="fa-solid fa-arrow-left-long fa-3x"></i>
                     </a>
                 </div>
-                <div class="col-6 py-5 text-end">
+                <div class="col-6 pt-5 text-end">
                     <a href="/" type="button" class="btn-close btn-close-white" aria-label="Close"></a>
                 </div>
             </div>
             <div class="row">
-                <div class="col py-3 magenta">
+                <div class="col-4">
+                </div>
+                <div class="col-4 py-3 magenta cuadrados" style="border-radius: 20px;">
                     <h1>Crear cuenta</h1>
-                </div>
-                <label for="exampleFormControlInput1" class="form-label">
-                    <h6>Email</h6>
-                </label>
-                <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="email">
-                <label for="exampleFormControlInput1" class="form-label pt-3">
-                    <h6>Contraseña</h6>
-                </label>
-                <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="password">
-                <label for="exampleFormControlInput1" class="form-label pt-3">
-                    <h6>Nombre de Usuario</h6>
-                </label>
-                <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="user">
-                <div class="form-check pt-3">
-                    <input class="form-check-input" type="radio" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        <small class="magenta">He leido y acepto los Términos de blah blah blah y la Política sin
-                            privacidad de Mafiance.</small>
+                    <hr>
+                    <label for="exampleFormControlInput1" class="form-label">
+                        <h6>Email</h6>
                     </label>
-                </div>
-                <div class="col py-3 text-center">
-                    <button type="submit" class="btn btn-outline-light btn-lg">¡Crear cuenta de una vez!</button>
-                </div>
-                <hr>
-                <div class="col text-center pt-3 pb-5">
-                    <h6>¿No quieres una cuenta personal? <a href="#" class="text-decoration-none magenta">Registrarse
-                            para una cuenta de entidad... Rompebolas.</h6></a>
+                    <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="email">
+                    <label for="exampleFormControlInput1" class="form-label pt-3">
+                        <h6>Contraseña</h6>
+                    </label>
+                    <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="password">
+                    <label for="exampleFormControlInput1" class="form-label pt-3">
+                        <h6>Nombre de Usuario</h6>
+                    </label>
+                    <input type="#" class="form-control" id="exampleFormControlInput1" placeholder="" name="user">
+                    <div class="form-check pt-3">
+                        <input class="form-check-input" type="radio" value="" id="flexCheckDefault">
+                        <label class="form-check-label" for="flexCheckDefault">
+                            <small class="magenta">He leido y acepto los Términos de blah blah blah y la Política sin
+                                privacidad de Mafiance.</small>
+                        </label>
+                    </div>
+                    <div class="col py-3 text-center">
+                        <button type="submit" class="btn btn-outline-warning btn-lg">¡Crear cuenta de una vez!</button>
+                    </div>
+                    <hr>
+                    <div class="col text-center">
+                        <h6>¿No quieres una cuenta personal? <a href="#"
+                                class="text-decoration-none amarillo">Registrarse
+                                para una cuenta de entidad... Rompebolas.</h6></a>
 
+                    </div>
                 </div>
+                <div class="col-4"></div>
             </div>
         </form>
     </section>
